mentor summary needed

--- a/Zhu.Projects.html
+++ b/Zhu.Projects.html
@@ -26,7 +26,7 @@
 		<div class=container">
 			<div class="row">
 				<div class="col-md-5">
-					<a href="#" title="blindsight"><img src="SolarCarProject.jpg"/></a>
+					<a href="#" title="blindsight"><img src="blindsight.jpeg"/></a>
 				</div>
 				<div class="col-md-5" style="float:right; margin:7em">
 				<h3>blindsight - Entrepreneurship Project 2018</h3>
@@ -35,12 +35,33 @@
 				<p> 
 					For my 2017 Entrepreneurship Project, I worked on a four-man team with Javier S, Christy K, and Devin M. 
 					We created an assistive wristband called blindsight to help visually impaired individuals navigate their surrounding more effectively than ever before.
-					Our prototype includes a Raspberry Pi Zero, an RPI camera module, haptic feedback motors, a Node.JS Express server, and an Android application. We created an armband by attaching the RPI, motors, and a LiPo battery into a 3D-printed case. This case was then sewn onto a sock, which would act as the wrist sleeve. When turned on, the Raspberry Pi continuously takes pictures with the camera module and sends them to our Node.JS server. To optimize the server connection, the images are converted into a base64 string prior to being sent to the server. Once the server receives this string, it signals the android application to retrieve the string and analyze the contents of the image. Finally, the android application will read out the description of the image to the blind user. To make our application most optimal for blind users, we implemented a wake word feature in which the app can be turned on and off by voice command, similar to Amazon Alexa. By continuously repeating these processes, we allow the user to visualize what is in their surroundings despite losing their sense of sight. The Blindsight wristband acts as a new pair of  'eyes' for the user by providing a constant verbal description of the immediate environment. 
+					Our prototype includes a Raspberry Pi Zero, an RPI camera module, haptic feedback motors, a Node.JS Express server, and an Android application. We created an armband by attaching the RPI, motors, and a LiPo battery into a 3D-printed case.
+					 This case was then sewn onto a sock, which would act as the wrist sleeve. When turned on, the Raspberry Pi continuously takes pictures with the camera module and sends them to our Node.JS server. To optimize the server connection, the images are converted into a base64 string prior to being sent to the server. Once the server receives this string, it signals the android application to retrieve the string and analyze the contents of the image. Finally, the android application will read out the description of the image to the blind user. To make our application most optimal for blind users, we implemented a wake word feature in which the app can be turned on and off by voice command, similar to Amazon Alexa. By continuously repeating these processes, we allow the user to visualize what is in their surroundings despite losing their sense of sight. The Blindsight wristband acts as a new pair of  'eyes' for the user by providing a constant verbal description of the immediate environment. 
 					We pitched our project at the end of May 2018 to a panel of judges during the 2018 DEDA Entrepreneurship Showcase and we won the first place prize in the event.
 					Click <a href="https://docs.google.com/document/d/1-h0XoMBdqJRz3EWU3Kl9kNTaaLocxf28Sv5z62r_RdY/edit?usp=sharing">here</a>
 					to view our documentation.
 					Click <a href="https://drive.google.com/open?id=1HN1suaNZhO3ise1C4XifUZ_r51OJex1pDxSypKdF4UE">here</a>
 					to view our presentation.
+				</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-5">
+					<a href="#" title="RoadWatch"><img src="scrum_tasksheet.png"/></a>
+				</div>
+				<div class="col-md-5" style="float:right; margin:7em">
+				<h3>RoadWatch</h3>
+				<h4>March 2018</h4>
+				<h4>AP Computer Science</h4>
+				<p> 
+				For this project, I worked on an eight man team and we created an android application that would allow users to report driving hazards for the local community.
+				Our team members consisted of Isaiah Cruz, Matthew Adrian, Stanley Jiang, Mark Kong, Justin Lee, John So, Sean Tseng, and me.
+				The purpose of this project was to learn and apply the scrum method of agile development.
+				In essence, the application would be created in three different sprints, where each sprint is a short development cycle followed by a testing and review session afterwards.
+				Through these quick paced cycles of development and testing, it allows a team to work effectively on specific goals and produce the minimum viable product in the fastest time possible.
+				My role in this project was the scrum master, so I led the meetings for review and testing after each development sprint.
+				Click <a href="https://docs.google.com/spreadsheets/d/1lgWMFhtJxt_CDHMAZRXJE0EiwrMK0E4HydfAqtf2Rx4/edit?usp=sharing">here</a>
+				to view our sprint log.
 				</p>
 				</div>
 			</div>
