--- a/Zhu.Resume.html
+++ b/Zhu.Resume.html
@@ -28,6 +28,20 @@
 				<a href="Resume.pdf"><img id="resumeImage" src = "ResumeImage.jpg"/></a>
 			</div>
 		</div>
+		<div class="row">
+			<div class="AboutMeVolleyball">
+				<p>
+					Some of my favorite things to do is playing volleyball and watching sports. 
+					I have played for a few years now but I have only played competitive for 3 years. 
+					This year I am playing on the East Bay Volleyball Academy U16 team. 
+					I am the captain of the team and is the starting outside hitter. 
+					Dublin HS will also possibly have mens volleyball this year as well, so I am very
+					excited for the high school season and the opportunity to represent DHS in my sport.
+					I understand that there will be many difficulties getting started in the first season,
+					but I hope that we will be able to overcome this challenges and become a successful team.
+				</p>
+			</div>
+		</div>
 		<div class="footer">
 			<div class="container">
 				<p>Michael Zhu<br>
