--- a/Zhu.Resume.html
+++ b/Zhu.Resume.html
@@ -1,53 +1,98 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link rel="stylesheet" href="bootstrap-3.3.5-dist/css/bootstrap.css">
-		<link rel='stylesheet' href='Zhu.Style.css'/>
-		<link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
-		<title>Michael Zhu's Website</title>
-		
-	</head>
-	<body>
-		<div class="header">
-       <h1><a href="index.html">Michael Zhu</a></h1>
-			<ul class="nav nav-pills">
-				<li><a href="Zhu.Contact.html">Contact</a></li>
-				<li class="active"><a href="Zhu.Resume.html">Resume </a></li>
-				<li><a href="Zhu.AboutMe.html">About me </a></li>
-				<li><a href="Zhu.Projects.html">Projects</a></li>
-				<li><a href="index.html">Home</a></li>
-			</ul>
+
+<head>
+	<link rel="stylesheet" href="bootstrap-3.3.5-dist/css/bootstrap.css">
+	<link rel='stylesheet' href='Zhu.Style.css' />
+	<link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+	<title>Michael Zhu's Website</title>
+
+</head>
+
+<body>
+	<div class="header">
+		<h1><a href="index.html">Michael Zhu</a></h1>
+		<ul class="nav nav-pills">
+			<li><a href="Zhu.Contact.html">Contact</a></li>
+			<li class="active"><a href="Zhu.Resume.html">Resume/Work Experience </a></li>
+			<li><a href="Zhu.AboutMe.html">About me </a></li>
+			<li><a href="Zhu.Projects.html">Projects</a></li>
+			<li><a href="index.html">Home</a></li>
+		</ul>
+	</div>
+	<div class="titleheader">
+		<h1>
+			My Resume
+		</h1>
+	</div>
+	<div class="row">
+		<div class="resume">
+			<a href="Resume.pdf"><img id="resumeImage" src="ResumeImage.jpg" /></a>
 		</div>
-		<div class="titleheader">
-			<h1>
-				My Resume
-			</h1>
+	</div>
+	<div class="titleheader">
+		<h1>
+			Work Experience
+		</h1>
+	</div>
+	<div class="row">
+		<div class="WorkExperience">
+			<h2 style="color:darkblue">
+				<b>Field Trips</b>
+			</h2>
+			<p>
+				In October 2016, I attended EECS Day at UC Berkeley, hosted by Eta Kappa Nu (HKN), an electrical
+				engineering and computer science honor society.
+				The event allowed us to experience a day in the life of a EECS student at UC Berkeley. We took a
+				department tour of the facilities and listened to a lecture by EECS professor John DeNero.
+				Students led us around Soda Hall and the Sutardja Center for Entrepreneurship and Technology to showcase
+				the different labs that they had.
+				They introduced us to both the computer science and electrical engineering fields that are contained
+				within the EECS major.
+				We worked on multiple demos and learned some basic coding as well as some basic circuit functions.
+				This was a really insightful trip that helped furthur my interests in the computer science field.
+			</p>
 		</div>
-		<div class="row">
-			<div class="resume">
-				<a href="Resume.pdf"><img id="resumeImage" src = "ResumeImage.jpg"/></a>
-			</div>
+	</div>
+	<div class="row">
+		<div class="WorkExperience">
+			<h2 style="color:darkblue">
+				<b>Mentorship Program</b>
+			</h2>
+			<p>
+				In my junior year of high school, I participated in the Engineering Academy's Mentorship Program.
+				I was paired with Shawn Mehaffey, who is an Information Risk Management Consultant for Chevron.
+				He introduced me to college and career planning, which allowed me develop an idea for what I wanted to
+				pursue in the future.
+				He gave a lot of insightful advice and guidance, helping me understand how the professional industry
+				works and how to improve myself to become a more attractive target for job recruiters.
+				We worked together on interview preparation, resume review, and developing SMART goals to keep my
+				academics on track.
+				Under his mentorship, I gained many important life and professional skills that I will always keep in
+				mind as a continue on in college and my career.
+			</p>
 		</div>
-		<div class="row">
-			<div class="AboutMeVolleyball">
+	</div>
+	<div class="row">
+			<div class="WorkExperience">
+				<h2 style="color:darkblue">
+					<b>Guest Speakers</b>
+				</h2>
 				<p>
-					Some of my favorite things to do is playing volleyball and watching sports. 
-					I have played for a few years now but I have only played competitive for 3 years. 
-					This year I am playing on the East Bay Volleyball Academy U16 team. 
-					I am the captain of the team and is the starting outside hitter. 
-					Dublin HS will also possibly have mens volleyball this year as well, so I am very
-					excited for the high school season and the opportunity to represent DHS in my sport.
-					I understand that there will be many difficulties getting started in the first season,
-					but I hope that we will be able to overcome this challenges and become a successful team.
+					Throughout these past four years of my high school career, the engineering program has invited many guest speakers from a wide variety of industries to come and speak to Dublin High students.
+					For me, two of the most memorable speakers were Danielle Demmon and James Morehead. Danielle Demmon was an electrical engineer at Lockeed Martin and provided us some insight on her career path and her work in Weapons Development Telemetry.
+					James Morehead was a project manager at Google, and he helped us understand the interview process at Google as well as the project that he was working on, Google Bulletin.
+					These guest speakers provided us a glimpse into the reality of the professional world and helped expand my perspective about engineering industries.
 				</p>
 			</div>
 		</div>
-		<div class="footer">
-			<div class="container">
-				<p>Michael Zhu<br>
-        		mbzhu1@gmail.com<br>
-				</p>
-			</div>
-		</div> 
-	</body>
+	<div class="footer">
+		<div class="container">
+			<p>Michael Zhu<br>
+				mbzhu1@gmail.com<br>
+			</p>
+		</div>
+	</div>
+</body>
+
 </html>
