--- a/Zhu.Projects.html
+++ b/Zhu.Projects.html
@@ -12,7 +12,7 @@
        <h1><a href="index.html">Michael Zhu</a></h1>
 			<ul class="nav nav-pills">
 				<li><a href="Zhu.Contact.html">Contact</a></li>
-				<li><a href="Zhu.Resume.html">Resume </a></li>
+				<li><a href="Zhu.Resume.html">Resume/Work Experience </a></li>
 				<li><a href="Zhu.AboutMe.html">About me </a></li>
 				<li class="active"><a href="Zhu.Projects.html">Projects</a></li>
 				<li><a href="index.html">Home</a></li>
