--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
        <h1><a href="index.html">MICHAEL ZHU</a></h1>
 			<ul class="nav nav-pills">
                 <li><a href="Zhu.Contact.html">CONTACT</a></li> 
-                <li><a href="Zhu.Resume.html">RESUME</a></li>
+                <li><a href="Zhu.Resume.html">RESUME/WORK EXPERIENCE</a></li>
                 <li><a href="Zhu.AboutMe.html">ABOUT ME</a></li>
                 <li><a href="Zhu.Projects.html">PROJECTS</a></li>
                 <li class="active"><a href="index.html">HOME</a></li>
